src/components/Header.css
.hero {
    padding: 25rem 0 25rem 0;
    margin: 0;

}

.hero-text {
    text-align: left;
    opacity: 0;
    transform: translateX(-100%);
    animation: slideIn 3s ease-in-out forwards;
}

.hero-text h1 {
    font-size: 4rem;
    line-height: 5rem;
}

.hero-text a {
    font-size: 1rem;
}

.hero-text .btn {
    background-color: #333;
    color: #fff;
    padding: 10px 20px;
    border-radius: 5px;
    text-decoration: none;
    font-weight: bolder;
}

.hero-text .btn:hover {
    background-color: #555;
    cursor: pointer;
}

@keyframes slideIn {
    to {
        opacity: 1;
        transform: translateX(0);
    }
}

